More changes is this how to github

--- a/serverpage.html
+++ b/serverpage.html
@@ -29,7 +29,7 @@
       <div class="row">
         <div class="col-xs-6">
           <div class="thumbnail">
-            <canvas id="usersOverTime"></canvas>
+            <!--<canvas id="usersOverTime"></canvas>-->
             <div class="caption">
               <h3>Users over time</h3>
               <p>Displays users over the server lifecycle</p>
@@ -42,7 +42,7 @@
       </div>
     </div>
     
-    <script>
+    <!--<script>
       var usersOverTime = document.getElementById("usersOverTime");
       var usersOverTimeChart = new Chart(usersOverTime, {{
           type: 'line',
@@ -55,6 +55,6 @@
               }}]
           }}
       }});
-    </script>
+    </script>-->
   </body>
 </html>
